Update index.html tagline and hero text for personalised website

--- a/index.html
+++ b/index.html
@@ -25,7 +25,11 @@
     <!-- Hero section -->
     <section class="hero">
       <h1>AS_ONE Studio</h1>
-      <p>Creative strategy and brand storytelling crafted for visionary organizations, brands, and cultural projects.</p>
+      <p>
+        Creative strategy and brand storytelling by Anastasia
+        Sapounaki—a 33‑year‑old branding and strategic marketing expert—crafted
+        for visionary organizations, brands and cultural projects.
+      </p>
       <a href="work.html">Explore Our Work</a>
     </section>
 
