Update about.html with moodboard portrait and updated founder description

--- a/about.html
+++ b/about.html
@@ -25,7 +25,13 @@
       <h2>About</h2>
       <div class="about-container">
         <div class="portrait">
-          Portrait
+          <!-- Replace the placeholder with a sample portrait image to give the page more personality. -->
+          <!-- Use the moodboard illustration to provide a creative, abstract portrait of the founder. -->
+          <img
+            src="moodboard.png"
+            alt="Creative moodboard representing the studio founder’s aesthetic and vision"
+            style="width: 100%; height: auto; border-radius: 8px;"
+          />
         </div>
         <div class="about-text">
           <h3>Anastasia Sapounaki</h3>
